# local-takkie

./: .gitignore  AUDIO_STREAMING.md  Cargo.toml  LICENSE  README.md  cargo_tool.rs  setup.sh
.github/workflows/: rust _ci_check.yml
src/: announce.rs  discovery.rs  main.rs  mdns.rs  udp.rs
src/audio/: mod.rs  rad.rs  sad.rs
src/network/: mdns.rs  mod.rs  udp.rs
src/ui/: tui.rs
